# napari-cotrack

./: .gitignore  LICENSE  README.md  pyinstaller.spec  pyproject.toml
.github/workflows/: build-binaries.yml  publish.yml
scripts/: install.ps1  install.sh
src/napari_cotrack/: __init__.py  __main__.py  _layer.py  napari.yaml  plugin.py  project.py
src/napari_cotrack/pipeline/: __init__.py  _ffmpeg.py  _io.py  extract.py  filter.py  render.py  review.py  track.py
tests/: _make_fixture.py  test_extract.py  test_layer.py  test_track.py
